config-root/namespaces/jx-staging/gradledemo/gradledemo-gradledemo-deploy.yaml
# Source: gradledemo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gradledemo-gradledemo
  labels:
    draft: draft-app
    chart: "gradledemo-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: gradledemo-gradledemo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: gradledemo-gradledemo
    spec:
      serviceAccountName: gradledemo-gradledemo
      containers:
        - name: gradledemo
          image: "gcr.io/jenkinsxio/gradledemo:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
