config-root/namespaces/jx-staging/gradledemo/gradledemo-ingress.yaml
# Source: gradledemo/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: gradledemo
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: gradledemo
              servicePort: 80
      host: gradledemo-jx-staging.dev.jenkins-x.me
